# mas-perplexity-research-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  진행log.md  확인필요.md
app/: __init__.py  cli.py  graph.py  io.py  output.py  plan_gate.py  state.py
app/executors/: __init__.py  base.py  manual_executor.py  mock_executor.py
app/nodes/: __init__.py  critic.py  evaluator.py  executor.py  hitl_result_loader.py  html_publisher.py  improver.py  parser.py  planner.py  prompt_builder.py  result_builder.py  run_logger.py
app/prompts/: critic.md  evaluator.md  improver.md  perplexity_research.md  planner.md
docs/: 01-domain-def.md  02-prd.md  03-architecture.md  04-tdd-plan.md  05-test-scenarios.md  06-implementation-roadmap.md  07-further-work.md  08-implementation-todo.md
tests/: test_evaluator.py  test_executor_mock.py  test_graph_flow.py  test_improvement_loop.py  test_output.py  test_parser.py  test_plan_gate.py  test_report_builder.py
tests/fixtures/: hitl_result.md
