[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mas-perplexity-research-agent"
version = "0.1.0"
description = "HITL Perplexity research workflow MVP"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=0.2",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

